<resources>
    <string name="app_name">Nairobi Tour</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nairobi_image">Nairobi Image</string>
    <string name="kenya">Kenya</string>
    <string name="nairobi">Nairobi</string>
    <string name="the_city_reaching_for_the_skies">The city reaching for the skies</string>
    <string name="welcome_to_nairobi">Welcome to Nairobi</string>
    <string name="welcome_message">East Africa\'s most cosmopolitan city, Nairobi is Kenyas beating heart, an exciting, maddening concrete jungle that jarringly counterpoints the untrammelled natural beauty to be found elsewhere in the country</string>
    <string name="home">home</string>
    <string name="about">about</string>
    <string name="aboutA">Nairobi\'s polarising character ensures that the city is reviled and loved in equal measure, and even those who love it might well admit that it\'s the kind of place many rave about only once they\'re away from it. For those who call it home, the city\'s charms include a vibrant cultural life, fabolous place to eat and exciting nightlife. Its detractors point to its horrendoud traffic, poor safety levels (\'Nairoberry\' is a common expat nickname) and its less-than - gorgeous apperance.</string>
    <string name="aboutB">However, with a fabolous national park on its doorstep, some wildlife-centric attractions, the excellent National Museum and a series of quirky sights, Nairobi\'s reality - like that of so many places with a bad reputation - will often come as a pleasant suprise</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
